--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
 
 	<body>
 		<!-- Main Content -->
-		<div>
+		<main>
 			<!-- Site header -->
-			<div>
+			<header class= "mainHeader">
 				<h1>Hallux Inc.</h1>
-				<h2>Company Catchphrase </h2>
-			</div>
+				<h2><em>Company Catchphrase</em></h2>
+			</header>
 			<!-- Main Navigation -->
-			<div>
+			<nav class= "headerNav">
 				<a href="#">Home</a>
 				<a href="#">Posts</a>
 				<a href="#">About Us</a>
 				<a href="#">Contact Us</a>
 				<a href="#">F.A.Q.</a>
-			</div>
-			<div>
-				<div>
+			</nav>
+			<!-- Article -->
+			<article>
+				<header>
 					<h1>Doing Good Business</h1>
 					<h5>Published: 12/12/2015</h5>
-				</div>
+				</header>
 
-				<div>
+				<section>
 					<h2>Main Topic</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus
 						diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus
@@ -62,22 +63,22 @@
 					</p>
 
 
-				</div>
+				</section>
 				<!-- Article Footer -->
-				<div>
+				<footer>
 					<img src="images/chuck.jpg" alt="john">
 					<h2>Author: John Doe</h2>
 					<p>
 						John Doe Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus
 						diam. Sed nisi.
 					</p>
-				</div>
+				</footer>
 
-			</div>
+			</article>
 			<!-- Side Bar -->
-			<div>
+			<aside>
 				<!-- Side Bar Item -->
-				<div>
+				<nav>
 					<h3>Recent Posts</h3>
 					<ul>
 						<li><a href="#">Hello World</a></li>
@@ -88,9 +89,9 @@
 						</li>
 						<li><a href="#">Hello World 2</a></li>
 					</ul>
-				</div>
+				</nav>
 				<!-- Side Bar Item -->
-				<div>
+				<nav>
 					<h3>Recent Comments</h3>
 					<ul>
 						<li><a href="#">Gabby Walton </a></li>
@@ -101,13 +102,22 @@
 						</li>
 						<li><a href="#">Nash Wilton</a></li>
 					</ul>
-				</div>
+				</nav>
 
 
-			</div>
+			</aside>
 
 			<div class="clear"></div>
-		</div>
+		</main>
+<script>
+var myName = "Nicolette Taylor";
+var favNumber = 2
+ /* Funnily enough, the hardest part of this test was figuring out how to put this comment here, 
+ but not really */
+
+</script>
+
+
 	</body>
 
 </html>
